# brandwatch

./: .replit  Readme.md  app.py  pyproject.toml  replit.md
.streamlit/: config.toml
attached_assets/: Pasted--Prompt-Analyser-Theme-Build-an-intelligent-AI-agent-that-monitors-brand-visibility-across-major-AI-1751694735419_1751694735420.txt
config/: industries.py
services/: ai_platforms.py  brand_analyzer.py  competitor_analyzer.py  prompt_generator.py  visibility_scorer.py
utils/: data_processor.py  nlp_processor.py
